# scrapper

./: README.md  pyproject.toml  render.yaml  requirements.txt
apps/auth_/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/auth_/migrations/: 0001_initial.py
apps/email_sender/: admin.py  models.py  send_email_task.py  serializers.py  urls.py  views.py
apps/email_sender/migrations/: 0001_initial.py
apps/scrape/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/scrape/migrations/: 0001_initial.py
config/: asgi.py  celery.py  settings.py  urls.py
staticfiles/: staticfiles.json
